--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -5,6 +5,5 @@
   <button type="submit">Add</button>
 </form>
 
-<ul>
-  <li *ngFor="let name of names">{{ name }}</li>
-</ul>
+{{ names.full_name }}
+{{ names.biography }}
