--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,8 +1,31 @@
-<p>{{ instagramUser.full_name | uppercase }}</p>
-<p>{{ instagramUser.biography | uppercase }}</p>
+<div class="flex-header-outer">
+  <div class="flex-header">
+    <div class="header item">{{ instagramUser.full_name | uppercase }}</div>
+    <div class="header-gray item">{{ instagramUser.biography | uppercase }}</div>
+  </div>
+  <div class="flex-header-small">
+    <a href="mailto:">
+      EMAIL
+    </a>
+  </div>
+  <div class="flex-header-small">
+    <a href="http://www.instagram.com/{{ instagramUser.username }}">
+      INSTAGRAM
+    </a>
+  </div>
+</div>
 
 <div class="container">
-    <div class="item" *ngFor="let feedItem of feed">
-      <img src="{{ feedItem.image_versions2.candidates[1].url }}" />
+    <div *ngFor="let feedItem of feed">
+      <div class="item">
+        <div class="parent">
+          <div class="child">
+            <img src="{{ feedItem.image_versions2.candidates[0].url }}" height="350px"/>
+          </div>
+          <div class="child">
+            {{ feedItem.caption.text | uppercase }}
+          </div>
+        </div>
+      </div>
     </div>
 </div>
